--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,17 +67,23 @@ dependencies {
     // Retrofit / OkHttp
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
-    implementation "com.squareup.okhttp3:okhttp:4.9.3"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
 
     //moshi
     implementation "com.squareup.moshi:moshi:1.14.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
     implementation "com.squareup.moshi:moshi-adapters:1.14.0"
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.14.0")
 
     //Hilt
     implementation 'com.google.dagger:hilt-android:2.44'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
     kapt 'com.google.dagger:hilt-android-compiler:2.44'
     kapt "androidx.hilt:hilt-compiler:1.0.0"
+
+    //Coil
+    implementation "io.coil-kt:coil-compose:2.0.0-rc03"
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
