--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,7 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     //Coil
-    implementation "io.coil-kt:coil-compose:2.0.0-rc03"
+    implementation "io.coil-kt:coil-compose:2.4.0"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
 }
