--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,8 @@ dependencies {
     implementation "io.coil-kt:coil-compose:2.4.0"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
+    testImplementation "io.mockk:mockk:1.13.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 }
